obs: change homepage path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://devalexxx.github.io/developerFolio/",
+  "homepage": "https://devalexxx.github.io",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
